<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="studio.bachelor.muninn.MuninnActivity">

    <studio.bachelor.draft.DraftView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/draft"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/select_photo"
        android:text="@string/select_photo_string"
        android:layout_alignBottom="@+id/draft"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_string"
        android:id="@+id/setting"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/select_photo" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_string"
        android:id="@+id/save"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/setting" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_string"
        android:id="@+id/upload"
        android:layout_alignTop="@+id/save"
        android:layout_toEndOf="@+id/save" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_string"
        android:id="@+id/sign"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/upload" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sound Test"
        android:id="@+id/btnSound"
        android:layout_alignParentBottom="true"
        android:visibility="invisible"
        android:layout_toEndOf="@+id/sign" />
</RelativeLayout>
